--- a/Online_Shop/Web.config
+++ b/Online_Shop/Web.config
@@ -30,6 +30,7 @@
     <!-- End EMail Setting-->
   </appSettings>
   <system.web>
+    <globalization culture="en-US" uiCulture="auto:en-US" />
     <roleManager enabled="true" />
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
